--- a/styles.css
+++ b/styles.css
@@ -527,6 +527,9 @@ img#qr-code {
 /************* social links ******************/
 
 .social-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     margin: 1rem 0;
 }
@@ -653,6 +656,11 @@ img#qr-code {
         top: 1%;
         right: 1%;
         font-size: 5rem;
+    }
+
+    .contact-section {
+        margin: 0;
+        padding: 30px 0 0;
     }
 
 }
