--- a/styles.css
+++ b/styles.css
@@ -735,8 +735,12 @@ img#qr-code {
         height: 100%;
     }
 
+    .modal-content {
+        max-width: 90vw;
+    }
+
     .modal-content .card {
-        max-height: 90vh ;
+        max-height: 80vh ;
     }
 
     .content-container p {
@@ -770,10 +774,6 @@ img#qr-code {
 
     .main-title h1 {
         font-size: 1.4rem;
-    }
-
-    .modal-content {
-        transform: scale(1);
     }
     
     .carousel {
