--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ section.business-cards {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     width: 80%;
     height: 100%;
     margin-top: 20px;
@@ -141,13 +141,14 @@ section.business-cards {
 .city-bg-image {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     background-image: url("images/city_spotlight_2.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    margin: 30px 0;
     /* max-height: 500px; */
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     /* background-color: white; */
     /* padding-top: 20px; */
@@ -245,6 +246,16 @@ section.business-cards {
 .image-card-container {
     width: 350px;
     height: 250px;
+}
+
+/* .modal-image-card-container {
+    width: 100%;
+    height: auto;
+} */
+
+.modal .card {
+    max-width: 400px;
+    width: 100%;
 }
 
 .card-content {
@@ -596,67 +607,24 @@ img#qr-code {
 }
 
 /***********************Media Queries*************************/
-@media (max-height: 801px) {
-    .modal-content {
-        max-width: 400px;
-        width: 100%;
-    }
-    
-    .modal-content.card {
-        /* height: 100%; */
-        width: 100%;
-    }
-}
-@media (max-height: 699px) {
-    /* Styles for devices with a height less than 700px */
-    .modal-content {
-        max-width: 300px;
-        width: 100%;
-    }
-    
-    .modal-content.card {
-        /* height: 100%; */
-        width: 100%;
+
+
+@media (min-width: 200px) and (max-width: 600px) {
+    .site-button {
+        font-size: 1rem;
     }
 
-    .image-card-container {
-        width: 250px;
-        height: 150px;
+    .main-title h1 {
+        font-size: 1.8rem;
     }
-    
-    .card-content {
-        max-height: 250px;
-        height: 100%;
-    }
-
-    .business-name {
-        max-height: 75px;
-    }
-
 
     .content-container {
-        width: 95%;
-        justify-content: start;
-        /* background-color: green; */
-        padding-bottom: 20px;
-    }
-
-    .content-container h2 {
-        font-size: 1.7rem;
-    }
-    
-    .content-container p {
-        color: #424242;
+        width: 100%;
+        padding: 0 10px;
     }
 }
 
-@media (min-width: 601px) {
-    /* .modal-content .card {
-        transform: scale(.5);
-    } */
-}
-
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) and (max-width: 800px) /* 600px wide or wider */{
 
     .main-title h1 {
         font-size: 1.8rem;
@@ -664,6 +632,11 @@ img#qr-code {
     
     .modal-content {
         margin: 0 10px;
+    }
+
+    .modal .card {
+        max-width: 250px;
+        width: 100%;
     }
 
     .image-card-container {
@@ -686,7 +659,7 @@ img#qr-code {
     }
 
     .business-name h2 {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
     }
 
     .content-container {
@@ -739,7 +712,49 @@ img#qr-code {
 
 }
 
-@media screen and (max-width: 420px) {
+@media (max-width: 801px) { /* 801px width and below and below 601px ht */
+    
+    .modal .card {
+        max-width: 350px;
+        width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 854px) and (max-height: 1281px){ /*below 854px width and below 1281 ht*/
+    .modal .card {
+        max-width: 350px;
+    }
+
+}
+
+@media (min-height: 720px) and (max-height: 800px) {
+    .modal .card {
+        max-width: 300px;
+    }
+}
+
+@media (max-height: 600px) {
+    .modal .card {
+        max-width: 250px;
+    }
+    .business-name h2 {
+        font-size: 1.3rem;
+    }
+    .site-button {
+        padding: 4px;
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 600px) {
+    img.profile-picture {
+        width: 60px;
+        height: auto;
+    }
+}
+
+@media  (max-width: 440px) /*below 440px*/ {
 
     .main-title h1{
         font-size: 1.6rem;
@@ -748,14 +763,15 @@ img#qr-code {
     .main-container {
         height: 100%;
     }
-/* 
-    .modal-content {
-        max-width: 100vw;
+
+    img.profile-picture {
+        width: 40px;
+        height: auto;
     }
 
-    .card {
-        max-height: 600px;
-    } */
+    .modal .card {
+        max-width: 280px;
+    }
 
     .content-container p {
         font-size: 1.3rem;
@@ -763,34 +779,11 @@ img#qr-code {
         text-align: left;
         line-height: 1.4;
     }
+
     .content-container h2 {
         line-height: 1.2;
     }
     
-    .image-card-container {
-        width: 300px;
-        height: 200px;
-    }
-
-    .card-content {
-        max-height: 250px;
-        height: 100%;
-    }
-
-    
-}
-@media (max-height: 668px) {
-
-    .modal-content {
-
-        max-width: 360px;
-        width: 100%;
-        /* transform: scale(.8); */
-    }
-
-    .card {
-        max-height: 600px;
-    }
 }
 
 @media screen and (max-width: 320px) {
@@ -837,12 +830,6 @@ img#qr-code {
 
     .business-name h2 {
         font-size: 1rem;
-    }
-
-    .site-button {
-        padding: 5px 10px;
-        font-size: 1rem;
-        letter-spacing: 1px;
     }
 
     .campaign {
