--- a/styles.css
+++ b/styles.css
@@ -518,7 +518,7 @@ img#qr-code {
     flex: 1;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
+    align-items: center;
     /* height: 100%; */
     /* background-color: red; */
     overflow: hidden;
@@ -530,8 +530,6 @@ img#qr-code {
     max-width: 800px; /* Limit width for readability */
     width: 100%;
     height: 100%;
-    margin: 2rem auto; /* Center the section with spacing */
-    padding: 2rem; /* Add internal spacing */
     background-color: #f5f5f5; /* Light background for contrast */
     border-radius: 10px; /* Rounded corners for a modern look */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
@@ -795,6 +793,10 @@ img#qr-code {
     .create .site-button {
         padding: 4px 10px;
     }
+    
+    .social-link.facebook {
+        font-size: .7rem;
+    }
 }
 
 @media screen and (max-width: 389px) {
@@ -825,7 +827,7 @@ img#qr-code {
     }
 
     .modal .card {
-        width: 280px;
+        width: 270px;
     }
 
     .card p {
@@ -849,6 +851,8 @@ img#qr-code {
     .site-button {
         padding: 2px;
     }
+
+
     footer {
         padding: 10px;
     }
