--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ header {
     justify-content: space-between;
     width: 100%;
     /* height: 100%; */
-    background-color: #ebebeb;
+    background-color: #535353;
     overflow: hidden;
 }
 
@@ -72,7 +72,7 @@ header {
     /* top: 0;
     left: 0; */
     z-index: 0;
-    opacity: .04;
+    opacity: .1;
 }
 
 img.cards-bg  {
