--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ header {
     justify-content: space-between;
     width: 100%;
     /* height: 100%; */
-    background-color: #535353;
+    background-color: #bfbfbf;
     overflow: hidden;
 }
 
@@ -89,6 +89,10 @@ section {
     /* padding: 5px 0; */
     scrollbar-width: none;
     /* background-color: rgb(99, 167, 255); */
+}
+
+section.home-hero {
+    background-color: rgb(239, 239, 239);
 }
 
 section.business-cards {
