--- a/styles.css
+++ b/styles.css
@@ -178,16 +178,16 @@ section.business-cards {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    line-height: normal;
+    line-height: 2;
     border: none;
     /* background: rgba(0, 0, 0, 0.6); */
     background: rgba(255, 255, 255, 0.6);
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(32, 32, 32, 0.6);
     /* color: white;   */
-    font-size: 24px;
+    font-size: 35px;
     padding: 10px 10px;
     cursor: pointer;
     transition: 0.3s;
