--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,11 @@ header {
 
 .main-title h1 {
     font-family: "Poppins", serif;
+    font-family: "Playfair Display", serif;
+    /* font-family:  serif; */
     text-transform: uppercase;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 700;
     color: white;
     font-size: 2.5rem;
 }
@@ -52,7 +54,7 @@ header {
     width: 100%;
     /* height: 100%; */
     background-color: #cad185;
-    background-color: #89f2fd;
+    background-color: #a8ccf0;
     overflow: hidden;
 }
 
@@ -93,7 +95,7 @@ section {
 }
 
 section.home-hero {
-    background-color: rgb(239, 239, 239);
+    background-color: #94b5d5;
 }
 
 section.business-cards {
@@ -627,7 +629,7 @@ img#qr-code {
 
 .rawpixel {
     font-size: x-small;
-    color: #efefef;
+    color: #94b5d5;
 }
 
 /***********************Media Queries*************************/
@@ -861,6 +863,11 @@ img#qr-code {
     
     .social-link.facebook {
         font-size: .7rem;
+    }
+
+    .carousel-btn {
+        font-size: 30px;
+        padding: 2px 25px;
     }
 }
 
