--- a/styles.css
+++ b/styles.css
@@ -819,10 +819,11 @@ img#qr-code {
     }
 }
 
-@media  (max-width: 420px) /*below 420px*/ {
+@media  (max-width: 431px) /*below 420px*/ {
 
     .main-title h1{
         font-size: 1.5rem;
+        font-weight: normal;
     }
 
     .main-container {
