--- a/styles.css
+++ b/styles.css
@@ -571,6 +571,8 @@ img#qr-code {
     max-width: 800px; /* Limit width for readability */
     width: 100%;
     height: 100%;
+    margin-top: 40px;
+    padding: 40px 0;
     background-color: #f5f5f5; /* Light background for contrast */
     border-radius: 10px; /* Rounded corners for a modern look */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
@@ -663,6 +665,12 @@ img#qr-code {
         padding: 0 10px;
     }
 
+    .contact-section {
+        border-radius: 0;
+        margin: 0;
+        padding: 40px 0 0;
+    }
+
     .image-card-container {
         width: 300px;
         height: 450px;
@@ -743,8 +751,9 @@ img#qr-code {
     }
 
     .contact-section {
+        border-radius: 0;
         margin: 0;
-        padding: 20px 0 0;
+        padding: 40px 0 0;
     }
 
     .contact-section h2 {
