--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ header {
     /* height: 100%; */
     background-color: #cad185;
     background-color: #a8ccf0;
+    background-color: #323232;
     overflow: hidden;
 }
 
@@ -495,7 +496,7 @@ img.spotlight-logo {
 footer {
     width: 100%;
     background-color: #191919;
-    color: #fff;
+    color: #565656;
     padding: 20px;
     text-align: center;
 }
